modified:   kubernetes/fcrepo-pvc.yaml 	modified:   kubernetes/fcrepo-service.yaml 	docker/services/fcrepo/Dockerfile-arg 	fcrepo-postgres-env-nobuild.yml

--- a/kubernetes/fcrepo-service.yaml
+++ b/kubernetes/fcrepo-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: fcrepo
   namespace: fcrepo
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - name: fcrepo
     port: 8080
