modified:   Dockerfile 	modified:   README.md 	modified:   docker/docker-compose.yml 	modified:   docker/fcrepo-mysql.yml 	modified:   docker/fcrepo-postgres.yml

--- a/docker/fcrepo-mysql.yml
+++ b/docker/fcrepo-mysql.yml
@@ -8,7 +8,7 @@ services:
   fcrepo:
     container_name: fcrepo
     build:
-      context: .
+      context: ..
       args:
         FEDORA_TAG: 5.0.2
         ModeshapeConfig: jdbc-mysql
